--- a/1/rewiew/index.html
+++ b/1/rewiew/index.html
@@ -1,1 +1,102 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Группировка профилей — Справка «Поиск по людям»</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
+  <h1>Группировка профилей: как система объединяет аккаунты одного человека</h1>
+
+  <div class="warning">
+    <p><strong>Сервис «Поиск по людям» больше не работает.</strong><br>Эта статья сохранена в архивных целях и описывает, как ранее работала функция группировки профилей.</p>
+  </div>
+
+  <h2>Зачем нужна группировка?</h2>
+  <p>Когда вы ищете человека по имени, фамилии или другим данным, он может быть зарегистрирован в нескольких социальных сетях: ВКонтакте, Facebook, LinkedIn и других.</p>
+  <p>Без группировки вы увидите десятки отдельных ссылок — и не сразу поймёте, какие из них принадлежат одному и тому же человеку.</p>
+  <p><strong>Группировка решает эту проблему</strong>: система автоматически объединяет профили, которые, скорее всего, принадлежат одному человеку, и показывает их как один блок.</p>
+  <p>Это экономит время и помогает быстрее находить нужного кандидата.</p>
+
+  <h2>Как работает группировка</h2>
+  <p>Система анализирует открытые данные профилей и ищет совпадения по следующим признакам:</p>
+  <ul>
+    <li><strong>ФИО</strong> (с учётом транслитерации и опечаток)</li>
+    <li><strong>Фотография</strong> (сравнение лиц с помощью ИИ)</li>
+    <li><strong>Место работы и должность</strong></li>
+    <li><strong>Город проживания</strong></li>
+    <li><strong>Дата рождения</strong></li>
+    <li><strong>Учебные заведения</strong></li>
+  </ul>
+  <p>Чем больше совпадений — тем выше вероятность, что профили принадлежат одному человеку.</p>
+
+  <div class="example">
+    <p><strong>Пример:</strong> Профиль в LinkedIn с именем <em>Ivan Petrov</em>, работающий в «Яндексе», и профиль во «ВКонтакте» с именем <em>Иван Петров</em>, указавший то же место работы и фото — будут объединены в одну группу.</p>
+  </div>
+
+  <h2>Что вы видите в результатах поиска</h2>
+  <p>Каждая группа отображается как отдельный блок:</p>
+  <ul>
+    <li><strong>Основная карточка</strong>: ФИО, фото, текущая должность и компания.</li>
+    <li><strong>Список профилей</strong>: значки соцсетей с ссылками на каждый аккаунт.</li>
+    <li><strong>Индикатор уверенности</strong>: «Высокая», «Средняя» или «Низкая» — показывает, насколько система уверена в объединении.</li>
+  </ul>
+  <p>Вы можете:</p>
+  <ul>
+    <li>Открыть любой профиль из группы.</li>
+    <li>Развернуть или свернуть список аккаунтов.</li>
+    <li>Сообщить об ошибке, если система объединила чужие профили.</li>
+  </ul>
+
+  <h2>Когда группировка может ошибаться</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Ситуация</th>
+        <th>Причина</th>
+        <th>Рекомендация</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Профили разных людей объединены</td>
+        <td>Совпадают имя, город и работа (например, однофамильцы в одной компании)</td>
+        <td>Нажмите «Сообщить об ошибке» под группой</td>
+      </tr>
+      <tr>
+        <td>Профили одного человека не объединены</td>
+        <td>Разные ФИО (например, никнейм), нет фото или мало данных</td>
+        <td>Попробуйте уточнить запрос или проверить профили вручную</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <h2>Советы для эффективного поиска</h2>
+  <ul>
+    <li>Используйте <strong>полное имя и город</strong> — это повышает точность группировки.</li>
+    <li>Если результатов слишком много — добавьте <strong>компанию</strong> или <strong>должность</strong>.</li>
+    <li>Всегда проверяйте <strong>фото и биографию</strong> — автоматика может ошибаться.</li>
+  </ul>
+
+  <h2>Нужна помощь?</h2>
+  <p>Если вы заметили системную ошибку в группировке или у вас есть идея, как её улучшить — отправьте нам обратную связь:</p>
+
+  <form class="feedback-form" id="feedbackForm">
+    <label for="email">Ваш email (необязательно)</label>
+    <input type="email" id="email" name="email" placeholder="example@domain.com">
+
+    <label for="message">Описание проблемы или предложения</label>
+    <textarea id="message" name="message" placeholder="Например: «Система объединила профили двух разных Ивановых»" required></textarea>
+
+    <button type="submit">Отправить отзыв</button>
+  </form>
+
+  <div class="warning">
+    <p><strong>Важно:</strong> «Поиск по людям» был закрыт в 2021 году. Все данные удалены. Эта документация предоставлена только для исторического контекста.</p>
+  </div>
+
+  <script src="program.js"></script>
+</body>
+</html>
